# med-lit-schema

./: .dockerignore  .flake8  .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG_FROM_FIRST_COMMIT.md  CLAUDE.md  DATABASE_SETUP.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_SETUP.md  Dockerfile  ENTITY_COLLECTION_INTERFACE.md  EPISTEMOLOGY_VIBES.md  G.sh  LICENSE  LT.sh  MANIFEST.in  MIGRATION_TO_KGRAPH.md  P.sh  POLYMORPHIC_QUERIES.md  PYPI_PREPARATION.md  README.md  REDIS_ENTITY_COLLECTION.md  TODO.md  Z.diff  __init__.py  base.py  california-house.txt  docker-compose.yml  entity.py  entity_sqlmodel.py  evidence_sqlmodel.py  extract_docs.py  lint_and_test.sh  lint_fix.sh  main.py  mapper.py  migration.sql  mkdocs.yml  paper_sqlmodel.py  (+5 more)
.github/workflows/: test.yml
docs/: index.md
docs/developer-guide/: architecture.md  docker.md  index.md  ingestion.md  testing.md
docs/research-notes/: epistemology.md  index.md  next-steps.md
docs/user-guide/: concepts.md  index.md  querying.md  quickstart.md  storage.md
ingest/: ARCHITECTURE.md  CLOUD_OLLAMA.md  NEXT_STEPS.md  README.md  TESTING.md  claims_pipeline.py  download_pipeline.py  embedding_interfaces.py  embeddings_pipeline.py  evidence_pipeline.py  graph_pipeline.py  ner_pipeline.py  ollama_embedding_generator.py  parser_interfaces.py  pipeline.sh  pmc_parser.py  provenance_pipeline.py  wait_for_postgres.py
ingest/aws-ollama/: ec2-ollama-setup.sh  terraform-ec2-gpu.tf
ingest/download/: PMC_DOWNLOAD_GUIDE.md  PMC_DOWNLOAD_QUICKREF.md  download_pipeline.py  run_pipeline.sh  sample_pmc_ids.txt  test_download.py
ingest/download/pmc_xmls/: PMC11707539.xml  PMC12748354.xml  PMC12748365.xml  PMC12750049.xml  PMC12750060.xml  PMC12750853.xml  PMC12751073.xml  PMC12751080.xml  PMC12751341.xml  PMC12752834.xml  PMC12753587.xml  PMC12753621.xml  PMC12753947.xml  PMC12754045.xml  PMC12754784.xml  PMC12754786.xml  PMC12756687.xml  PMC12757100.xml  PMC12757429.xml  PMC12757604.xml  PMC12759042.xml  PMC12759264.xml  PMC12764803.xml  PMC12764813.xml  PMC12764932.xml  PMC12765497.xml  PMC12765899.xml  PMC12766194.xml  PMC12766254.xml  PMC12766425.xml  PMC12766696.xml  PMC12767394.xml  (+39 more)
ingest/pmc_xmls/: PMC10759991.xml  PMC12718677.xml  PMC12748135.xml  PMC12748648.xml  PMC12750178.xml  PMC12754092.xml  PMC12754332.xml  PMC12755470.xml  PMC12757276.xml  PMC12757875.xml  PMC12758042.xml  PMC12758147.xml  PMC12758711.xml  PMC12765603.xml  PMC12765812.xml  PMC12767500.xml  PMC12770061.xml  PMC12770896.xml  PMC12773717.xml  PMC12775414.xml  PMC12775561.xml  PMC12775696.xml  PMC12778424.xml  PMC12779508.xml  PMC12781513.xml  PMC12783552.xml  PMC12784210.xml  PMC12784249.xml  PMC12785482.xml  PMC12785631.xml  PMC12788883.xml  PMC5346327.xml  PMC5961482.xml  PMC6462820.xml
medlit_kgraph/: EXTRACTION_PORTING.md  README.md  SETUP.md  __init__.py
medlit_kgraph/domain/: __init__.py  documents.py  domain.py  entities.py  relationships.py  vocab.py
medlit_kgraph/pipeline/: embedding_providers.py  embeddings.py  llm_client.py  mentions.py  ner_extractors.py  parser.py  relationships.py  resolve.py
medlit_kgraph/scripts/: ingest.py
output/: entities.jsonl  extraction_edges.jsonl  extraction_provenance.json  ingest.db
output/json_papers/: PMC10759991.json  PMC11707539.json  PMC12718677.json  PMC12748135.json  PMC12748354.json  PMC12748365.json  PMC12748648.json  PMC12750049.json  PMC12750060.json  PMC12750178.json  PMC12750853.json  PMC12751073.json  PMC12751080.json  PMC12751341.json  PMC12752834.json  PMC12753587.json  PMC12753621.json  PMC12753947.json  PMC12754045.json  PMC12754092.json  PMC12754332.json  PMC12754784.json  PMC12754786.json  PMC12755470.json  PMC12756687.json  PMC12757100.json  PMC12757276.json  PMC12757429.json  PMC12757604.json  PMC12757875.json  PMC12758042.json  PMC12758147.json  PMC12758711.json  PMC12759042.json  PMC12759264.json  PMC12764803.json  PMC12764813.json  PMC12764932.json  PMC12765497.json  PMC12765603.json  (+65 more)
pipeline/: NEO4J_COMPATIBILITY.md  README.md  TESTING.md  claims_pipeline.py  claims_pipeline_refactored.py  embedding_generators.py  embedding_interfaces.py  embeddings_pipeline.py  evidence_pipeline.py  evidence_pipeline_refactored.py  graph_pipeline.py  ner_pipeline.py  ner_pipeline_refactored.py  parser_interfaces.py  pmc_parser.py  postgres_storage.py  provenance_pipeline.py  provenance_pipeline_refactored.py  sqlite_entity_collection.py  sqlite_storage.py  storage_interfaces.py  test_pipeline.py  test_simple.py
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
query/: API_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  NOTES.md  README.md  client.py  explore_queries.ipynb  graphql_examples.py  graphql_schema.py  server.py  storage_factory.py
query/.ipynb_checkpoints/: explore_queries-checkpoint.ipynb
query/routers/: graphiql_custom.py  mcp_api.py  rest_api.py
storage/: NEO4J_COMPATIBILITY.md  README.md  __init__.py  interfaces.py
storage/backends/: README.md  __init__.py  postgres.py  sqlite.py  sqlite_entity_collection.py
storage/models/: README.md  __init__.py  paper.py
test_output_entities/: ingest.db
tests/: __init__.py  conftest.py  test_base.py  test_basic_models.py  test_entity_collection_functionality.py  test_entity_collection_interface.py  test_entity_list_pagination.py  test_entity_sqlmodel.py  test_evidence_ontology.py  test_hypothesis_relationships.py  test_ingestion_contracts.py  test_mapper.py  test_mapper_row_handling.py  test_ontology_entities.py  test_paper_optional_provenance.py  test_pipeline_storage.py  test_provenance_enforcement.py  test_provenance_ingest.py  test_provenance_pipeline.py  test_query_client.py  test_relationship.py  test_relationship_mapper.py  test_schema_entity.py  test_setup_database.py
tests/ingest/: __init__.py  test_claims_pipeline_integration.py  test_download_pipeline.py  test_embeddings_pipeline_ollama.py  test_ollama_embedding_generator.py  test_pipelines_context_managers.py
tests/integration/: __init__.py  test_full_pipeline_postgres.py
tests/storage/: README.md  __init__.py
(+120 files in other folders)
