[project]
name = "med-graph-schema"
version = "0.1.0"
description = "Domain and persistence models for the Medical Knowledge Graph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.3",
    "sqlmodel>=0.0.31",
    "tqdm>=4.67.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["schema"]
package-dir = {"schema" = "."}

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E402"]

[tool.pylint.main]
max-line-length = 200

[tool.flake8]
line-length = 200
ignore = ["E203", "E266", "E501", "W503", "E402"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]
