[project]
name = "med-lit-schema"
version = "0.1.0"
description = "Domain and persistence models for the Medical Knowledge Graph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Will Ware", email = "will.ware@gmail.com"}
]
keywords = [
    "medical",
    "knowledge-graph",
    "biomedical",
    "pydantic",
    "postgresql",
    "entity-extraction",
    "evidence-tracking",
    "ontology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
dependencies = [
    "pydantic>=2.10.3",
    "sqlmodel>=0.0.31",
    "tqdm>=4.67.1",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "twine>=6.2.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "transformers>=4.57.3",
    "lxml>=6.0.2",
    "torch>=2.8.0",  # CPU-only version configured via [tool.uv] section below
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "strawberry-graphql[fastapi]>=0.283.3",
    "mcp>=1.25.0",
    "sentence-transformers>=5.2.0",
    "black[jupyter]>=25.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
query = [
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
]
scispacy = [
    # Optional: scispacy for fast spaCy-based NER (has dependency issues on Python 3.13+)
    # Install with: uv pip install scispacy
    # Then: uv pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz
    "scispacy>=0.5.4",
]

[project.urls]
Homepage = "https://github.com/wware/med-lit-schema"
Documentation = "https://github.com/wware/med-lit-schema#readme"
Repository = "https://github.com/wware/med-lit-schema"
Issues = "https://github.com/wware/med-lit-schema/issues"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["med_lit_schema"]
package-dir = {"med_lit_schema" = "."}

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E402"]

[tool.pylint.main]
max-line-length = 200

[tool.flake8]
line-length = 200
ignore = ["E203", "E266", "E501", "W503", "E402"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]

[tool.uv]
# Configure PyTorch CPU-only index with unsafe-best-match to prioritize PyPI for most packages
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
# Force torch and related packages to use CPU-only versions
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
